// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно логирует показы васа при рендере 1`] = `
Object {
  "event": "VAS_SHOW",
  "originalPrice": 997,
  "price": 300,
  "serviceId": "all_sale_toplist",
}
`;

exports[`правильно логирует показы васа при рендере 2`] = `
Object {
  "event": "VAS_SHOW",
  "originalPrice": 497,
  "price": 150,
  "serviceId": "all_sale_special",
}
`;

exports[`правильно логирует показы васа при рендере 3`] = `
Object {
  "event": "VAS_SHOW",
  "originalPrice": 1247,
  "price": 375,
  "serviceId": "package_turbo",
}
`;

exports[`при клике на вас передаст правильные параметры в модал оплаты 1`] = `
Array [
  Object {
    "category": "cars",
    "from": "popup-vas-discount",
    "offerId": "1084271227-b1f5d533",
    "services": Array [
      Object {
        "name": "Турбо-продажа",
        "service": "package_turbo",
      },
    ],
    "shouldShowSuccessTextAfter": true,
  },
]
`;

exports[`при клике на вас правильно залогирует событие клика 1`] = `
Object {
  "event": "VAS_CLICK",
  "originalPrice": 1247,
  "price": 375,
  "serviceId": "package_turbo",
}
`;
